--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ dj-database-url==0.5.0
 Django==3.1.3
 django-embed-video==1.3.3
 django-heroku==0.3.1
+django-tinymce==3.1.0
 gunicorn==20.0.4
 idna==2.10
 Pillow==8.0.1
 psycopg2==2.8.6
+python-dotenv==0.15.0
 pytz==2020.4
 requests==2.25.0
 sqlparse==0.4.1
